tests/parser/good/self/37.lat
int main(int a) {
    boolean a = true;
    if (true) {
        while (a) {
            a = false;
        }
        int[] a = new int[0];
        for (int b : a) {
            return 0;
        }
        if (true) {
            ;
        } else {
            return 5;
        }
        if (true) {return 111;  } else {return 11;}
    }

}
